# travel_ground_filter

./: CMakeLists.txt  README.md  package.xml
include/ground_segmentation/: travel_awf_node.hpp  travel_ground_filter_nodelet.hpp
src/: travel_awf_node.cpp  travel_ground_filter_nodelet.cpp
